# cloud-native-todo-hackathon

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-phase-i-console-app/: 0001-phase-i-task-decomposition.tasks.prompt.md
history/prompts/constitution/: 001-hackathon-ii-constitution-creation.constitution.prompt.md
specs/001-phase-i-console-app/: plan.md  spec.md  tasks.md
src/: main.py  models.py  operations.py  validators.py
