[project]
name = "cloud-native-todo"
version = "0.1.0"
description = "Phase I: Todo In-Memory Python Console App - Evolution of Todo Hackathon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
